--- a/takehome.html
+++ b/takehome.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Take-Home Calculator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -13,7 +13,7 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="takehome.html">Take-Home Pay Calculator</a>
-        <a href="vacancy.html">Vacancy Search</a>
+        <a href="vacancies.html">Vacancy Search</a>
     </nav>
 
     <form>
