--- a/vacancies.html
+++ b/vacancies.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vacancy</title>
-    <link rel="stylesheet" href="vacancy.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="update()">
 
     <h1>Vacancy Search</h1>
 
     <nav>
         <a href="index.html">Home</a>
         <a href="takehome.html">Take-Home Pay Calculator</a>
-        <a href="vacancy.html">Vacancy Search</a>
+        <a href="vacancies.html">Vacancy Search</a>
     </nav>
 
     <div class="search-form">
@@ -33,7 +33,7 @@
             <div id="searchBox"></div>
         </div>
     </div>
-    <img src="Images/Vacancy image.jpg" alt="" srcset="" width="100%">
+    
 
     <script src="vacancies.js"></script>
 
